Preparing sections for the data analysis

--- a/Phase 3 - Data analysis.qmd
+++ b/Phase 3 - Data analysis.qmd
@@ -5,3 +5,30 @@ format:
   pdf: default
 ---
 
+## Introduction
+
+
+
+## Data Description
+
+
+
+## Graphical Analysis
+
+
+
+## Model Fitting
+
+
+
+## Testing the model
+
+
+
+## Extension of the model
+
+
+
+## Conclusion
+
+
