Starting with the graphical analysis (work in progress) introducing the LMDI decomposition

--- a/Phase 3 - Data analysis.qmd
+++ b/Phase 3 - Data analysis.qmd
@@ -115,38 +115,51 @@ About the dataset
 The dataset we will be using for our analysis corresponds to a merge of two datasets : one from the US Census Bureau which provides data on Quarterly workforce characteristics of workers in California and Texas, and another from the US Environmental Protection Agency which provides data on energy-producing facilities in the US. 
 
 After merging and cleaning, we ended up with a dataset of 18270 observations from the two States of interest, California and Texas, covering yearly the period 2013 to 2023. We chose this time period because our emissions dataset covers years from 2010 to 2023 but the first years had sparse data. Thus we decided to delete those years for clarity's sake, which should not induce any major changes in further analyses.
+## Part 1 : Non-causal analysis
 
-- rajouter tableaux des du dataset
+### Graphical analysis
 
 ```{r}
 #| echo: false
-# Summary table for our joined dataset
-dataset_summary <- joined_dataset |>
-  summarise(
-    "Number of rows" = nrow(joined_dataset),
-    "Number of columns" = ncol(joined_dataset),
-    "Period" = paste(range(year), collapse= " - "),
-    "Periodicity" = "Annual",
-    "Extremum levels of CO2 emissions " = paste(range(`Unit CO2 emissions (non-biogenic)`), collapse = " - "),
-    ### separate the rows that have a "," to not double count firms in several subsectors as distinct values
-    "Number of industry" = length(unique(industry)),
-    "Number of sectors" = length(unique(`NAICS2  (sectors)`)),
-    "Total number of missing values across the sheet" = sum(sapply(joined_dataset, function(x) sum(is.na(x)))),
-    "Missing values in one our key variables" = sum(
-      sum(is.na(`Total CO2 Emissions (non_biogenic)`)),
-      sum(is.na(avg_Emp)),
-      sum(is.na(avg_EarnS)),
-      sum(is.na(avg_FrmJbC))
-  )
+#| message: false
 
-joined_dataset_summary |>
-  kable("html", caption = "Final database information") |>
-  kable_styling(full_width = T, bootstrap_options = c("striped", "hover", "condensed"))
+# Evolution of Average Monthly Wage, Average Employment and Total CO2 Emissions in selected NAICS2 sectors
+joined_dataset |>
+  filter(`NAICS2  (sectors)` == "21" | `NAICS2  (sectors)` == "22" | `NAICS2  (sectors)` == "32") |>
+  group_by(`NAICS2  (sectors)`, year, State) |>
+  summarise(avg_wage_sector = mean(avg_EarnS, na.rm = TRUE), avg_emp_sector = mean(avg_Emp, na.rm = TRUE), .groups = "drop") |>
+  ggplot(aes(x = year, y = avg_wage_sector, fill = `NAICS2  (sectors)`)) +
+  geom_col()
+```
+
+```{r}
+#| echo: false
+#| message: false
+
+# Evolution of Average Annual Employment in NAICS2 sectors
+joined_dataset |>
+  group_by(`NAICS2  (sectors)`, year, State) |>
+  summarise(avg_emp_sector = mean(avg_Emp, na.rm = TRUE), .groups = "drop") |>
+  ggplot(aes(x = year, y = avg_emp_sector, color = `NAICS2  (sectors)`)) +
+  geom_line() +
+  facet_wrap(vars(State))
+```
+
+```{r}
+#| echo: false
+#| message: false
+
+# Evolution of Net Employment Change in NAICS2 sectors
+joined_dataset |>
+  group_by(`NAICS2  (sectors)`, year, State) |>
+  summarise(avg_emp_change_sector = mean(avg_FrmJbC, na.rm = TRUE), .groups = "drop") |>
+  ggplot(aes(x = year, y = avg_emp_change_sector, color = `NAICS2  (sectors)`)) +
+  geom_line() +
+  facet_wrap(vars(State))
 ```
 
 
-
-## Graphical Analysis
+### LMDI decomposition
 
 
 
